@@ -3,7 +3,7 @@
 BATCH_NAME= bulk  
 CLIENTS_NUM_MAX=5 # Same as CLIENTS_NUM
 CLIENTS_NUM_START=1
-CLIENTS_INITIAL_INC=1
+CLIENTS_RAMPUP_INC=1
 INTERFACE   =eth0    
 NETMASK=16  
 IP_ADDR_MIN= 192.168.1.1
